alcometer dark mode --fix

--- a/assets/scss/sections/_alcometer.scss
+++ b/assets/scss/sections/_alcometer.scss
@@ -92,3 +92,10 @@ $ma-blue-1: #081a3e;
   font: 500 20px Gilroy;
 }
 
+
+
+.dark-mode{
+  .ma-alco-card__bottom--body--value{
+    background: #1C1C1E !important;
+  }
+}
